[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/battle/ActorStatusPanel.gd" type="Script" id=1]
[ext_resource path="res://src/ui/battle/actordetails/ActorPortrait.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/ui/icons/stats/hp.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/stats/ap.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/ui/icons/stats/evasion.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/ui/icons/stats/parry.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/ui/icons/stats/resist.png" type="Texture" id=7]

[node name="ActorStatusPanel" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -23.0
margin_right = 106.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="PortraitButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0

[node name="ActorPortrait" parent="PortraitButton" instance=ExtResource( 2 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -93.0
margin_bottom = -8.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 88.0
margin_bottom = 20.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 86.0
margin_bottom = 18.0
mouse_filter = 2
custom_constants/separation = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 86.0
margin_bottom = 5.0
mouse_filter = 2

[node name="HP" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 31.0
margin_bottom = 5.0
mouse_filter = 2
custom_constants/separation = 1

[node name="CurrentHP" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HP"]
margin_right = 12.0
margin_bottom = 5.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[color=#55c74446]0[color=#c74446]25"
text = "025"
scroll_active = false

[node name="HPBar" type="TextureProgress" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HP"]
margin_left = 13.0
margin_right = 18.0
margin_bottom = 5.0
mouse_filter = 2
max_value = 5.0
value = 3.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.333333 )

[node name="MaxHP" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HP"]
margin_left = 19.0
margin_right = 31.0
margin_bottom = 5.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[color=#c74446]150"
text = "150"
scroll_active = false

[node name="AP" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 6.0
margin_right = 86.0
margin_bottom = 11.0
mouse_filter = 2
custom_constants/separation = 1

[node name="CurrentAP" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/AP"]
margin_right = 12.0
margin_bottom = 5.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[color=#55556a97]0[color=#556a97]15"
text = "015"
scroll_active = false

[node name="APBar" type="TextureProgress" parent="PanelContainer/MarginContainer/VBoxContainer/AP"]
margin_left = 13.0
margin_right = 18.0
margin_bottom = 5.0
mouse_filter = 2
max_value = 5.0
value = 2.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.333333 )

[node name="MaxAP" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/AP"]
margin_left = 19.0
margin_right = 31.0
margin_bottom = 5.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "[color=#55556a97]0[color=#556a97]80"
text = "080"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
margin_top = 1.0
margin_bottom = -8.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="Parry" type="ColorRect" parent="HBoxContainer"]
margin_right = 9.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 13 )
mouse_filter = 2
color = Color( 0.815686, 0.462745, 0.243137, 1 )

[node name="Icon" type="TextureRect" parent="HBoxContainer/Parry"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 6.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Value" type="Label" parent="HBoxContainer/Parry"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -6.0
custom_colors/font_color = Color( 0.929412, 0.882353, 0.831373, 1 )
text = "10"
align = 1
valign = 1

[node name="Evasion" type="ColorRect" parent="HBoxContainer"]
margin_left = 9.0
margin_right = 18.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 13 )
mouse_filter = 2
color = Color( 0.443137, 0.505882, 0.254902, 1 )

[node name="Icon" type="TextureRect" parent="HBoxContainer/Evasion"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 6.0
mouse_filter = 2
texture = ExtResource( 5 )

[node name="Value" type="Label" parent="HBoxContainer/Evasion"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -6.0
custom_colors/font_color = Color( 0.929412, 0.882353, 0.831373, 1 )
text = "10
"
align = 1
valign = 1

[node name="Resist" type="ColorRect" parent="HBoxContainer"]
margin_left = 18.0
margin_right = 27.0
margin_bottom = 13.0
rect_min_size = Vector2( 9, 13 )
mouse_filter = 2
color = Color( 0.623529, 0.458824, 0.666667, 1 )

[node name="Icon" type="TextureRect" parent="HBoxContainer/Resist"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 6.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="Value" type="Label" parent="HBoxContainer/Resist"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -6.0
custom_colors/font_color = Color( 0.929412, 0.882353, 0.831373, 1 )
text = "10
"
align = 1
valign = 1

[node name="Banner" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -8.0
margin_bottom = -1.0
mouse_filter = 2
color = Color( 0.666667, 0.611765, 0.568627, 1 )

[node name="Name" type="Label" parent="Banner"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -3.0
margin_right = 45.0
margin_bottom = 3.0
custom_colors/font_color = Color( 0.462745, 0.411765, 0.396078, 1 )
text = "Arvus"
clip_text = true

[node name="Label" type="Label" parent="Banner"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -3.0
margin_right = -1.0
margin_bottom = 3.0
custom_colors/font_color = Color( 0.462745, 0.411765, 0.396078, 1 )
text = "Lv. 12 Paladin"
align = 2

[connection signal="pressed" from="PortraitButton" to="." method="_on_PortraitButton_pressed"]
